5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_2445.log
== SUBMITION (2019-04-14 22:34:11) 
-- CODE:
t = input("temperatura c / F":)
vt = float(input("valor da temperatura:"))
if (t == "F"):
	c = 5 / 9 * (vt- 32)
else:
	c = (vt * (9 / 5)) + 32
	print(round(c , 2))
-- EXECUTION TIME:
0.103891
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:34:39) 
-- CODE:
t = input("temperatura c / F":)
vt = float(input("valor da temperatura:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
	print(round(v , 2))
-- EXECUTION TIME:
0.367841
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:34:42) 
-- CODE:
t = input("temperatura c / F":)
vt = float(input("valor da temperatura:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
	print(round(v , 2))
-- EXECUTION TIME:
0.033288
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:35:30) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
	print(round(v , 2))
-- EXECUTION TIME:
0.029135
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:36:07) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.0331941
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 22:36:14) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
print(round(v , 2))
-- ERROR:
File "XXXX", line 1
    t = input("temp em celsius c / F":)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:36:21) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt- 32)
else:
	v = (vt * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.038763
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:37:12) 
-- CODE:
t = input("temp em celsius c / F":)
valor da temp = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (valor da temp - 32)
else:
	v = (valor da temp * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.0327771
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:37:44) 
-- CODE:
t = input("temp em celsius c / F":)
valor = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (valor - 32)
else:
	v = (valor * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.036464
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:39:39) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
else:
	v = (vt * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.0351629
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:39:40) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
else:
	v = (vt * (9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.0369999
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 22:39:53) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
else:
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.034591
-- ERROR:
Error response from daemon: Container 7e9d62c677c059d421ac0198c8371203ab8d651d4469b686ea5b55a312632995 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:11:42) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
if (t == "C"):
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.186353
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 1
    t = input("temp em celsius c / F":)
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:11:45) 
-- CODE:
t = input("temp em celsius c / F":)
vt = float(input("valor da temp:"))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
if (t == "C"):
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- ERROR:
File "XXXX", line 1
    t = input("temp em celsius c / F":)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:12:28) 
-- CODE:
t = input("temp em celsius c / F: ")
vt = float(input("valor da temp: "))
if (t == "F"):
	v = 5 / 9 * (vt - 32)
if (t == "C"):
	v = (vt *(9 / 5)) + 32
print(round(v , 2))
-- EXECUTION TIME:
0.279469
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
